# peerfetch

./: .gitpod.yml  README.md
client/javascript/: package-lock.json  package.json
examples/hello-world/: index.html
examples/helloworld/: README.md  index.html  install.sh  run-fastapi-app.sh  run-peerfetch-proxy.sh
examples/helloworld/edge_device/: .gitignore  .peerjsrc  fastapi_app.py  install.sh  peerjs-config.yaml  requirements.txt  run-app.sh  run-peerfetch.sh
javascript/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
javascript/peerfetch/: .gitignore  babel.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
javascript/peerfetch/src/: index.ts  peerfetch.ts
javascript/peerfetch/tests/: hello-world.spec.ts
javascript/src/: peerfetch.ts
javascript/tests/: hello-world.spec.ts.bak
python/: .gitignore
python/peerfetch/src/: setup.cfg
python/peerfetch/src/peerfetch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/src/: setup.cfg
python/src/peerfetch/: .gitignore  proxy.py
