[metadata]
name = peerfetch
version = 0.0.1
author = Ivelin Ivanov
author_email = ivelin.ivanov@ambianic.ai
description = Python implementation of peerfetch. Peer-to-peer HTTP over WebRTC Datachannel.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ambianic/peerfetch
license = Apache Software License 2.0
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Topic :: Communications
	Intended Audience :: Developers

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires = 
	peerjs>1.0
	
[coverage:run]
source = peerfetch

[flake8]
ignore = E203,W503
max-line-length = 150

[isort]
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = peerjs
line_length = 88
multi_line_output = 3

[mypy]
disallow_untyped_calls = True
disallow_untyped_decorators = True
mypy_path = stubs
strict_optional = False